--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.17.0",
+    "react-simple-captcha": "^9.3.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.32"
   },
